# clinica

./: .gitignore  DetalleAtenciones_171025_0629.xlsx  EPSONLX-350  InformeClinica.spec  PyWhatKit_DB.txt  README.md  SaldoPorCliente_20250925_130525.xlsx  actualizador.py  actualizador.spec  config.py  consultorio.spec  docker-compose.yml  enviar_informe.py  enviar_informe.spec  envioWs.py  envioWs.spec  envio_recordatorio_medicamentos.py  envio_recordatorio_medicamentos.spec  envio_resumen_grupo.py  envio_resumen_grupo.spec  envio_turnos_prof.py  envio_turnos_prof.spec  informe_compras_20250817_06_16.xlsx  informe_compras_20250817_06_38.xlsx  informe_stock_2025_10.xlsx  informe_ventas_20250817_06_37.xlsx  leer_confirmaciones.py  leer_confirmaciones.spec  login.py  main.py  main.spec  requirements.txt  subir_version.py
admin/: index.html  (+1 more)
backend/: Dockerfile  Makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  auth.py  bets.py  kyc.py  tournaments.py  wallet.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: audit.py  bet.py  kyc.py  market.py  match.py  team.py  topup.py  tournament.py  user.py  wallet.py  withdrawal.py
backend/app/schemas/: audit.py  auth.py  bet.py  kyc.py  tournament.py  user.py  wallet.py
backend/app/seed/: seed_data.py
backend/app/services/: audit.py  bets.py  ledger.py  settlement.py  storage.py
backend/tests/: conftest.py  test_flow.py
(+147 files in other folders)
